# SmartShop-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
config/: agent.yml  chroma.yml  prompts.yml  rag.yml
data/query_sets/: air_fryer_midea_experiment_v1_2026_04_13.jsonl  air_fryer_midea_query_bank_v2.jsonl  air_fryer_midea_query_set_main_v2.jsonl  air_fryer_midea_query_set_main_v3.jsonl  air_fryer_midea_query_set_model_confirmation_v1.jsonl  air_fryer_midea_query_set_model_confirmation_v2.jsonl  air_fryer_midea_query_set_ragas_v2.jsonl  air_fryer_midea_query_set_v1.jsonl
docs/: PLAN001.md  api_usage_guide.md  experiment_v1_结果聚焦分析.md  query_set_拆分说明.md  ragas_eval_guide.md  数据收集操作清单.md  数据收集方案.md  数据组织说明.md  知识库与测试集扩充计划.md  项目方案.md  项目评测说明.md  项目重构.md
prompts/: intent_router.txt  main_prompt.txt  query_rewrite.txt  rag_summarize.txt  rerank.txt  smalltalk_answer.txt  transform_query.txt
src/smart_clean_agent/agent/: react_agent.py  runtime_context.py
src/smart_clean_agent/api/: dependencies.py  main.py  schemas.py
src/smart_clean_agent/model/: factory.py
src/smart_clean_agent/rag/: ingest.py  rag_service.py  vector_store.py
src/smart_clean_agent/web/: app.py  (+1 more)
tests/: test_agent_tool_factory.py  test_api.py  test_bm25_retriever.py  test_chat_service.py  test_eval_analyze_ragas_results.py  test_eval_build_ragas_dataset.py  test_ingest.py  test_model_factory.py  test_rag_service.py  test_react_agent.py  test_responses_chat.py  test_session_service.py  test_status_event_service.py  test_vector_store.py
(+109 files in other folders)
